# mwe-toml-parse

./: CMakeLists.txt  example.toml  main.cpp
